# weasel-lsp

./: .gitignore  .info  CMakeLists.txt  CmakePresets.json  README.md  ROAD_NOTE.md  TODO_LIST.md  vcpkg.json
config/: bimap.sh
examples/: CMakeLists.txt  main.cpp
include/wlsp/: builder.hpp  constant.hpp  exception.hpp  json.hpp  server.hpp  types.hpp  wlsp.hpp
include/wlsp/json/: jsonValue.hpp  jsonWriter.hpp
include/wlsp/server/: capability.hpp  jsonHandler.hpp  server.hpp
include/wlsp/types/: applyWorkspaceEdit.hpp  cancelParams.hpp  codeAction.hpp  codeLens.hpp  colorPresentation.hpp  command.hpp  completion.hpp  configuration.hpp  declaration.hpp  definition.hpp  diagnostic.hpp  didChangeConfiguration.hpp  didChangeTextDocument.hpp  didChangeWatchedFiles.hpp  didChangeWorkspaceFolders.hpp  didCloseTextDocument.hpp  didOpenTextDocument.hpp  didSaveTextDocument.hpp  documentColor.hpp  documentFilter.hpp  documentFormatting.hpp  documentHighlight.hpp  (+44 more)
lib/: CMakeLists.txt
lib/json/: CMakeLists.txt  jsonWriter.cpp
lib/server/: CMakeLists.txt  capability.cpp  jsonHandler.cpp  jsonWriter.cpp  server.cpp
lib/types/: CMakeLists.txt  applyWorkspaceEdit.cpp  cancelParams.cpp  codeAction.cpp  codeLens.cpp  colorPresentation.cpp  command.cpp  completion.cpp  configuration.cpp  declaration.cpp  definition.cpp  diagnostic.cpp  didChangeConfiguration.cpp  didChangeTextDocument.cpp  didChangeWatchedFiles.cpp  didChangeWorkspaceFolders.cpp  didCloseTextDocument.cpp  didOpenTextDocument.cpp  didSaveTextDocument.cpp  documentColor.cpp  documentFilter.cpp  documentFormatting.cpp  documentHighlight.cpp  documentLink.cpp  documentOnTypeFormatting.cpp  documentRangeFormatting.cpp  documentSymbol.cpp  executeCommand.cpp  fileResourceChanges.cpp  foldingRange.cpp  genericObject.cpp  hover.cpp  implementation.cpp  initialize.cpp  jsonTypes.cpp  location.cpp  locationLink.cpp  logMessage.cpp  markupContent.cpp  message.cpp  (+27 more)
